--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ SQLAlchemy==1.3.24
 loguru==0.7.0
 asyncpg==0.28.0
 lxml
-beautifulsoup4
+beautifulsoup4~=4.12.2
 html5lib
 fake_useragent
 pip==23.1.2
@@ -21,3 +21,5 @@ python-dateutil==2.8.2
 alembic==1.11.3
 setuptools==65.5.0
 APScheduler==3.10.4
+asyncio~=3.4.3
+aiopayAPI~=0.1.4.7
